# RacingCarKata

./: CMakeLists.txt
LeaderBoard/include/: Driver.h  Race.h  SelfDrivingCar.h
LeaderBoard/source/: Driver.cpp  LeaderBoard.cpp  Race.cpp  SelfDrivingCar.cpp
LeaderBoard/tests/: CMakeLists.txt  LeaderBoard_Test.cpp  driver_test.cpp  race_test.cpp  self_driving_car_test.cpp
TelemetrySystem/: CMakeLists.txt
TelemetrySystem/include/: TelemetryClient.h  TelemetryClientInterface.hpp  TelemetryConnectionInterface.hpp  TelemetryConnectionRandom.hpp  TelemetryDiagnosticControls.h  TelemetryMessageReceiverInterface.hpp  TelemetryMessageReceiverRandom.hpp
TelemetrySystem/source/: TelemetryClient.cpp  TelemetryConnectionRandom.cpp  TelemetryDiagnosticControls.cpp  TelemetryMessageReceiverRandom.cpp
TelemetrySystem/tests/: CMakeLists.txt  TelemetryClient_Test.cpp  TelemetryDiagnosticControls_Test.cpp
TextConverter/: CMakeLists.txt
TextConverter/include/: FileReader.hpp  FileReaderInterface.hpp  HtmlPagesConverter.h  HtmlTextConverter.h
TextConverter/source/: FileReader.cpp  HtmlTextConverter.cpp
TextConverter/tests/: CMakeLists.txt  FileReaderMock.hpp  HtmlTextConverter_Test.cpp
TirePressureMonitoring/: CMakeLists.txt
TirePressureMonitoring/include/: Alarm.h  Sensor.h  sensor_interface.hpp
TirePressureMonitoring/source/: Alarm.cpp  Sensor.cpp
TirePressureMonitoring/tests/: Alarm_Test.cpp  CMakeLists.txt  Sensor_Test.cpp
TurnTicketDispenser/: CMakeLists.txt
TurnTicketDispenser/include/: TicketDispenser.h  TurnNumberSequence.h  TurnNumberSequenceInterface.hpp
TurnTicketDispenser/source/: TicketDispenser.cpp  TurnNumberSequence.cpp
TurnTicketDispenser/tests/: TicketDispenser_Test.cpp
